--- a/.github/workflows/build_event_buddy.yml
+++ b/.github/workflows/build_event_buddy.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+env:
+  IMAGE_NAME: event-buddy
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build image
-      run: docker build --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" .
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
     - name: Log in to registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
