--- a/.github/workflows/build_event_buddy.yml
+++ b/.github/workflows/build_event_buddy.yml
@@ -5,14 +5,19 @@ on:
     branches:
       - main
 
+env:
+  IMAGE_NAME: event-buddy
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      packages: write
+      contents: read
     steps:
     - uses: actions/checkout@v4
     - name: Build image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+      run: docker build --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" .
     - name: Log in to registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
