--- a/.github/workflows/build_event_buddy.yml
+++ b/.github/workflows/build_event_buddy.yml
@@ -1,12 +1,9 @@
 name: Build and Push Docker Image
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-      
-env:
-  IMAGE_NAME: event-buddy
 
 jobs:
   label:
@@ -14,8 +11,6 @@ jobs:
     outputs:
       release-type: ${{ steps.parse-labels.outputs.release-type }}
       change-type: ${{ steps.parse-labels.outputs.change-type }}
-      prerelease-type: ${{ steps.parse-labels.outputs.prerelease-type }}
-      provider-version: ${{ steps.parse-labels.outputs.provider-version }}
     permissions:
       packages: write
       contents: write
@@ -42,13 +37,11 @@ jobs:
         fi
 
     - name: Determine new version number (Standard)
-      if: needs.label.outputs.prerelease-type == ''
       uses: actions/github-script@v7
       id: new-version-standard
       env:
         PREV_VERSION: ${{ steps.prevtag.outputs.previousversion }}
         RELEASE_TYPE: ${{ needs.label.outputs.release-type }}
-        PROVIDER_VERSION: ${{ needs.label.outputs.provider-version }}
       with:
         script: |
           const script = require('./src/.github/scripts/pr-scripts/plan_new-version.js')
@@ -77,45 +70,63 @@ jobs:
           script: |
             const script = require('./src/.github/scripts/pr-scripts/comment_pr-comment.js')
             await script({github, context, core})
-
-  build:
-    runs-on: ubuntu-latest
+  update-files:
     needs: label
-    steps: 
-    - name: Build image
-      run: docker build --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" .
-
-  release:
+    permissions:
+      issues: write
+      pull-requests: write
+      contents: write
     runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Log in to registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+    name: 'Update release files.'
+    steps:  
+      - name: "Checkout Repository"
+        uses: actions/checkout@v4
+        with:
+          path: src
+          fetch-depth: 0
+          ref: 'main'
+      - name: Fetch Release Notes
+        id: fetch-release-notes
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+            const readFile = (filePath) => fs.readFileSync(filePath, 'utf-8').trim();
 
-    - name: Push image
-      run: |
-        IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+            const changelogPath = 'src/CHANGELOG.md';
+            const changelogContent = readFile(changelogPath);
 
-        echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=${{ needs.label.outputs.release-version }}
-        docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-        docker push $IMAGE_ID:$VERSION
-
-    - name: Update values.yaml
-      run: |
-        cd config
-        sed -i 's|APP_VERSION:.*|APP_VERSION: '${{ needs.label.outputs.release-version }}'|' event-buddy-values.yaml 
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'github-actions@users.noreply.github.com'
-        git add event-buddy-values.yaml
-        git commit -m "Update event-buddy-values.yaml"
-        git push
-
-    - name: Create Release
-      uses: elgohr/Github-Release-Action@v5
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        title: Event Buddy Release - ${{ needs.label.outputs.release-version }}
-        tag: ${{ needs.label.outputs.release-version }}
+            core.setOutput('existing-changelog', changelogContent);
+      - name: Prepend New Changelog Content
+        id: prepend-changelog
+        run: |
+          mkdir -p tmp && cd tmp
+          echo "# Changelog" > updated-changelog.md
+          echo "" >> updated-changelog.md
+          printf "${{ needs.detect.outputs.changelog-content }}" >> updated-changelog.md
+          printf "${{ steps.fetch-release-notes.outputs.existing-changelog }}" | sed '1d' >> updated-changelog.md
+      - name: Generate Readme Content
+        working-directory: src
+        run: |
+          npm install js-yaml --save
+          node .github/scripts/generate-readme.js
+      - name: Checkout Pull Request Branch Again
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
+          path: src
+      - name: Commit and Push Updates
+        working-directory: src
+        run: |
+          git config user.name "GitHub-Actions[bot]"
+          git config user.email "GitHub-Actions[bot]@users.noreply.github.com"
+          sed -i 's|APP_VERSION:.*|APP_VERSION: '${{ needs.label.outputs.release-version }}'|' ./config/event-buddy-values.yaml 
+          cp ${{ github.workspace }}/tmp/updated-changelog.md CHANGELOG.md
+          cp ${{ github.workspace }}/tmp/new-README.md README.md
+          git add CHANGELOG.md README.md event-buddy-values.yaml
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Bot: Updating CHANGELOG and README for release based on #${{ github.event.pull_request.number }}"
+            git push origin ${{ github.event.pull_request.head.ref }}
+          fi
