--- a/.github/workflows/build_event_buddy.yml
+++ b/.github/workflows/build_event_buddy.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-    
+      with: 
+        path: src
     - name: Parse and Add Labels
       id: parse-labels
       uses: actions/github-script@v7
