--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -12,14 +12,14 @@ jobs:
       release-type: ${{ steps.parse-labels.outputs.release-type }}
       change-type: ${{ steps.parse-labels.outputs.change-type }}
     permissions:
-      issues: write
-      pull-requests: write
-      contents: read
+      packages: write
+      contents: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with: 
         path: src
+        fetch-depth: 0
     - name: Parse and Add Labels
       id: parse-labels
       uses: actions/github-script@v7
@@ -43,7 +43,7 @@ jobs:
       id: new-version-standard
       env:
         PREV_VERSION: ${{ steps.prevtag.outputs.previousversion }}
-        RELEASE_TYPE: ${{ needs.label.outputs.release-type }}
+        RELEASE_TYPE: ${{ steps.label.outputs.release-type }}
       with:
         script: |
           const script = require('./src/.github/scripts/pr-scripts/plan_new-version.js')
