--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -81,6 +81,7 @@ jobs:
         env:
           releaseVersion: '${{ needs.label.outputs.release-version }}'
           previousVersion: '${{ needs.label.outputs.previous-version }}'
+          changelog: '${{ needs.label.outputs.changelog-content }}'
         with:
           script: |
             const script = require('./src/.github/scripts/pr-scripts/comment_pr-comment.js')
@@ -119,7 +120,7 @@ jobs:
           mkdir -p tmp && cd tmp
           echo "# Changelog" > updated-changelog.md
           echo "" >> updated-changelog.md
-          printf "${{ needs.detect.outputs.changelog-content }}" >> updated-changelog.md
+          printf "${{ needs.label.outputs.changelog-content }}" >> updated-changelog.md
           printf "${{ steps.fetch-release-notes.outputs.existing-changelog }}" | sed '1d' >> updated-changelog.md
       - name: Generate Readme Content
         working-directory: src
