--- a/.github/workflows/release_event_buddy.yml
+++ b/.github/workflows/release_event_buddy.yml
@@ -37,7 +37,7 @@ jobs:
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
         echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=${{ needs.label.outputs.release-version }}
+        echo VERSION=$VERSION
         docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
 
@@ -46,5 +46,5 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        title: Event Buddy Release - ${{ needs.label.outputs.release-version }}
-        tag: ${{ needs.label.outputs.release-version }}
+        title: ${{ steps.release-version.outputs.VERSION }}
+        tag: ${{ steps.release-version.outputs.VERSION }}
