--- a/.github/workflows/release_event_buddy.yml
+++ b/.github/workflows/release_event_buddy.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Get release version
       id: release-version
       run: |
-        $(awk '/$IMAGE_NAME/{print $NF}' config/event-buddy-deployment.yaml)
-        VERSION=$(awk '/$IMAGE_NAME/{print $NF}' config/event-buddy-deployment.yaml)
+        VERSION=$(grep "$IMAGE_NAME:" config/${IMAGE_NAME}-deployment.yaml | awk -F: '{print $3}')
         echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
     - name: Build image
       run: docker build --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" .
