--- a/config/event-buddy-deployment.yaml
+++ b/config/event-buddy-deployment.yaml
@@ -18,6 +18,10 @@ spec:
         name: event-buddy
         ports:
         - containerPort: 80
+      - command:
+        - tail
+        - "-f"
+        - /dev/null
       volumeMounts:
       - name: azure-secrets-store
         mountPath: "/mnt/secrets-store"
