--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "Peter Cort",
     "license": "MIT",
     "dependencies": {
+        "@sequelize/postgres": "^7.0.0-alpha.43",
         "discord-interactions": "^4.0.0",
         "discord.js": "^14.16.3",
         "dotenv": "^16.4.5",
