triggering a change for a pr

--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -138,10 +138,9 @@ jobs:
         run: |
           git config user.name "GitHub-Actions[bot]"
           git config user.email "GitHub-Actions[bot]@users.noreply.github.com"
-          sed -i 's|${{ needs.label.outputs.previous-version }}|${{ needs.label.outputs.release-version }}|' config/event-buddy-deployment.yaml
           cp ${{ github.workspace }}/tmp/updated-changelog.md CHANGELOG.md
           cp ${{ github.workspace }}/tmp/new-README.md README.md
-          git add CHANGELOG.md README.md config/event-buddy-deployment.yaml
+          git add CHANGELOG.md README.md
           if ! git diff-index --quiet HEAD; then
             git commit -m "Bot: Updating CHANGELOG and README for release based on #${{ github.event.pull_request.number }}"
             git push origin ${{ github.event.pull_request.head.ref }}
