--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "author": "Peter Cort",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.7.9",
         "discord-interactions": "^4.0.0",
         "discord.js": "^14.16.3",
-        "dotenv": "^16.4.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "fbf-event-buddy": "file:",
         "sequelize": "^6.37.5",
