--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": ">=20.x"
     },
     "scripts": {
-        "start": "node src/app.js",
+        "start": "NODE_ENV=production node src/app.js",
         "register": "node src/commands.js",
         "dev": "nodemon src/app.js"
     },
