--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -19,12 +19,11 @@ jobs:
         with:
           app-id: ${{ vars.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
-          
+          owner: ${{ github.repository_owner }}
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Get new version
-        if: steps.check_version.outputs.version_changed == 'true'
         id: get_version
         working-directory: event-buddy
         run: |
@@ -32,7 +31,6 @@ jobs:
           echo "::set-output name=new_version::$NEW_VERSION"
 
       - name: Create new branch and update image tag
-        if: steps.check_version.outputs.version_changed == 'true'
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
