--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -25,8 +25,7 @@ jobs:
       - name: Get new version
         id: get_version
         run: |
-          NEW_VERSION=$(grep '^appVersion:' app.version | awk '{print $2}')
-          echo $NEW_VERSION
+          NEW_VERSION=$(cat app.version)
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
       - name: Checkout FBF Config Repo
         uses: actions/checkout@v4
