--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -44,7 +44,7 @@ jobs:
           git checkout -b $BRANCH_NAME
 
           # Update the image.tag in values.yaml
-          sed "s/^appVersion: .*/appVersion: \"$NEW_VERSION\"/" event-buddy/Chart.yaml
+          sed -i "s/^appVersion: .*/appVersion: \"$NEW_VERSION\"/" event-buddy/Chart.yaml
           
           git config --global user.name "${{ steps.app-token.outputs.app-slug }}[bot]"
           git config --global user.email "${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"
