--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -137,6 +137,10 @@ jobs:
         working-directory: src
         run: | 
           sed -i 's/"version": "[^"]*"/"version": "${{ needs.label.outputs.release-version }}"/' package.json
+      - name: Update app.version with new version
+        working-directory: src
+        run: | 
+           echo "${{ needs.label.outputs.release-version }}" >| app.version
       - name: Commit and Push Updates
         working-directory: src
         run: |
@@ -144,8 +148,8 @@ jobs:
           git config user.email "GitHub-Actions[bot]@users.noreply.github.com"
           cp ${{ github.workspace }}/tmp/updated-changelog.md CHANGELOG.md
           cp ${{ github.workspace }}/tmp/new-README.md README.md
-          git add CHANGELOG.md README.md package.json
+          git add CHANGELOG.md README.md package.json app.version
           if ! git diff-index --quiet HEAD; then
-            git commit -m "Bot: Updating CHANGELOG, README and package.json for release based on #${{ github.event.pull_request.number }}"
+            git commit -m "Bot: Updating CHANGELOG, README, app.version and package.json for release based on #${{ github.event.pull_request.number }}"
             git push origin ${{ github.event.pull_request.head.ref }}
           fi
