--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scripts": {
         "start": "NODE_ENV=production node src/app.js",
         "register": "node src/commands.js",
-        "dev": "nodemon src/app.js"
+        "dev": "nodemon src/app.js",
+        "lint": "eslint src/**/*.js"
     },
     "author": "Peter Cort",
     "license": "MIT",
@@ -26,6 +27,9 @@
         "sqlite3": "^5.1.7"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "eslint": "^9.17.0",
+        "globals": "^15.14.0",
         "nodemon": "^3.1.9"
     }
 }
