--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -29,9 +29,13 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const script = require('./src/.github/scripts/pr-scripts/parse-add-labels.js')
-          await script({github, context, core})
-
+          if (context.actor == 'dependabot'){
+            core.setOutput('release-type': 'chore')
+            core.setOutput('change-type': 'semver:patch')
+          } else {
+            const script = require('./src/.github/scripts/pr-scripts/parse-add-labels.js')
+            await script({github, context, core})
+          }
     - name: Detect previous version number
       id: prevtag
       working-directory: src
