--- a/.github/workflows/build_event_prep.yml
+++ b/.github/workflows/build_event_prep.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
+          console.log(context.actor)
           if (context.actor == 'dependabot'){
             core.setOutput('release-type', 'chore')
             core.setOutput('change-type', 'semver:patch')
